--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.2.0
   cloud_firestore: ^4.0.5
+  firebase_auth: ^4.1.2
 
 dev_dependencies:
   flutter_test:
